# catalyser

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE.md  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
catalyser/: Cargo.toml
catalyser-derive/: Cargo.toml
catalyser/src/: lib.rs
catalyser/src/serdex/: collection.rs  mod.rs  number.rs  string.rs
catalyser/src/serdex/error/: mod.rs  out_of_bound.rs
catalyser/src/stdx/: collections.rs  mod.rs  primitive_number.rs  scope_functions_extension.rs  str_extension.rs  string.rs
catalyser/src/stdx/error/: is_empty_or_blank_string.rs  is_empty_sequence.rs  mod.rs
catalyser/src/stdx/extension/: mod.rs  scope_functions_extension.rs  str_extension.rs
