[package]
name = "catalyser"
description = "A comprehensive collection of extensions to simplify and enhane rust development."
version = "0.1.0"
keywords = [
    "utils",
    "std",
    "serde",
]
authors.workspace = true
edition.workspace = true
categories.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true


[dependencies]
serde = { version = "1.0.216", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { version = "1.0.134" }

[features]
default = []

# Provide `catalyser` unstable functionality.
unstable = []

# Provide derive macros.
derive = []

# Provide `catalyser` for serde library.
# Requires a serde dependency.
serde = ["dep:serde"]
